added new routes

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -11,6 +11,8 @@
 
             <div class="col-lg-4 col-md-6 col-12">
               <div class="card user-card">
+                <h3>{{ user.username }}</h3>
+                <p>{{ user.bio }}</p>
                 <div class="card-inner">
                   <div class="image-wrapper">
                     <img src="{{ user.header_image_url }}" alt="" class="card-hero">
