--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -29,7 +29,7 @@
           </li>
           <li class="stat">
             <p class="small">Likes</p>
-            <h4>TBD</h4>
+            <h4><a href="/users/{{user.id}}/likes">{{ user.likes|length }}</a></h4>
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
@@ -58,7 +58,6 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
     <p>{{ user.bio }}</p>
     <p class="user-location"><span class="fa fa-map-marker"></span>LOCATION HERE</p>
   </div>
