--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -20,17 +20,16 @@
             </div>
             {% if g.user.id != message.user_id %}
             <form method="POST" action="/messages/{{ message.id }}/like" class="messages-like">
-                <button type="submit" class="
-              btn
-              btn-sm
-              {{'btn-primary' if message.id in likes else 'btn-secondary'}}">
+                <button type="submit" class="btn btn-sm {{'btn-primary' if message.id in likes else 'btn-secondary'}}">
                     <i class="fa fa-thumbs-up"></i>
                 </button>
             </form>
             {% endif %}
+             
         </li>
 
         {% endfor %}
     </ul>
+
 </div>
 {% endblock %}
